# synthetic-eeg

./: .gitignore  Dockerfile  Makefile  buildspec.yml  main.py  models.py  pyproject.toml  synthetic_eeg.py
