[tool.poetry]
name = "synthetic-eeg"
version = "0.1.0"
description = "Generate synthetic eeg data using NeuroDSP package for testing visualization tools and DSP algorithms."
authors = ["luiscam7 <lcamargo2007@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
fastapi = "^0.112.2"
mne = "^1.8.0"
pydantic = "^2.8.2"
pandas = "^2.2.2"
numpy = "^2.1.0"
neurodsp = "^2.2.1"
scipy = "^1.14.1"
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^8.3.2"
pytest-coverage = "^0.0"
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
